Refactor : AuthController에서 로그인 실패 시 401 에러 반환, BinaryContentController에서 반환값 BinaryContent로 수정, 존재하지 않을 경우 404 에러 반환, User와 UserStatus에서의 isOnline 로직 개선, ChannelController의 변수값 newChannel로 수정, Controller에 Service 로직이 구현되어 있는 다수 코드 Service로 이동
Feature: UserWebController 및 Thymeleaf 연동 추가, AI 생성 API가 아니라 ModelAndView를 반환하도록 수정